--- a/scripts/datasheet-generator/styles/pro-style.css
+++ b/scripts/datasheet-generator/styles/pro-style.css
@@ -1,10 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 * {
-    font-size: 11px;
     font-family: 'Source Sans Pro', sans-serif;
     color: black;
     text-decoration: none;
+}
+
+html {
+    font-size: 11px;
+}
+
+.title-front {
+    font-size: 1.75rem;
+    font-family: 'Roboto Mono', monospace;
+    text-align:right;
+}
+
+.title {
+    color: #95a5a6;
+    font-size: 1.5rem;
+    font-family: 'Roboto Mono', monospace;
+    text-align:right;
+    padding-top:50px;
+}
+
+.footer {
+    font-size: 1rem;
 }
 
 table {
@@ -119,5 +140,5 @@ img {
     width: 50%;
     display: block;
     margin-left: auto;
-    margin-right: 0;
+    margin-right: 0;    
 }
