--- a/scripts/datasheet-generator/styles/pro-style.css
+++ b/scripts/datasheet-generator/styles/pro-style.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 * {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Open Sans', 'Source Sans Pro', sans-serif;
     color: black;
     text-decoration: none;
 }
 
 html {
-    font-size: 11px;
+    font-size: 62.5%; /* 10px for 16px based systems */
+    line-height: 1.4;
 }
 
 table {
@@ -35,30 +36,25 @@ th {
     background-color: #bdc7c7;
 }
 
-h1 {
+h1, h2, h3, h4 {
     color: #95a5a6;
-    font-size: 28px;
     font-family: 'Roboto Mono', monospace;
+}
+
+h1 {
+    font-size: 2.8rem;
 }
 
 h2 {
-    color: #95a5a6;
-    font-size: 16px;
-    font-family: 'Roboto Mono', monospace;
-    font-weight: bold;
+    font-size: 1.6rem;
 }
 
-h3 {
-    color: #95a5a6;
-    font-size: 12px;
-    font-family: 'Roboto Mono', monospace;
-    font-weight: bold;
+h3, h4 {
+    font-size: 1.2rem;
 }
 
-h4 {
-    color: #95a5a6;
-    font-size: 12px;
-    font-family: 'Roboto Mono', monospace;
+h2, h3 {
+    font-weight: bold;
 }
 
 ul {
@@ -79,12 +75,11 @@ img {
     margin: auto;
     display: block;
     align-self: center;
-    /*page-break-inside: avoid;*/
+    page-break-inside: avoid;
 }
 
 .title-header, .title-frontpage{
     white-space: nowrap;    
-    color: #95a5a6;
     font-family: 'Roboto Mono', monospace;
     text-align:right;
 }
@@ -95,6 +90,7 @@ img {
 }
 
 .title-header {    
+    color: #95a5a6;
     font-size: 1.5rem;
     padding-top:50px;
 }
