--- a/scripts/datasheet-generator/styles/pro-style.css
+++ b/scripts/datasheet-generator/styles/pro-style.css
@@ -63,6 +63,9 @@ h2, h3 {
 
 ul {
     list-style-type: square;
+    padding-left: 2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.75rem;
 }
 
 li {
@@ -207,12 +210,12 @@ div.subtitle + p > img[src^="assets/featured"] {
     margin-top: 15px;
 }
 
-#feature-list * {
+ul#feature-list * {
     font-size: 1rem;
     page-break-inside: avoid;
 }
 
-#feature-list li {
+ul#feature-list li {
     margin-bottom: 2px;
 }
 
